--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-customtkinter>=5.2.0
-pynput>=1.7.6
-matplotlib>=3.7.0
+customtkintflet>=0.10.0
+PyYAML>=6.0
+pywin32>=300
+scikit-learn>=1.3.0
+joblib>=1.3.0
+numpy>=1.24.0
 pandas>=2.0.0
-python-dotenv>=1.0.0
-Pillow>=10.0.0
-opencv-python>=4.8.0
-# mediapipe>=0.10.0  # Optional - for eye tracking (requires Python 3.8-3.11)
+opencv-python
+# Optional dependencies
+# mediapipe  # For eye tracking, requires Python 3.11 or lower
+# ML dependencies
+scikit-learn>=1.3.0
+joblib>=1.3.0
+numpy>=1.24.0
