Fix CI failures: resolve logic bugs, typing errors, and style issues

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ joblib>=1.3.0
 numpy>=1.24.0
 pandas>=2.0.0
 opencv-python
+pytest
+pytest-cov
+mypy
 # Optional dependencies
 # mediapipe  # For eye tracking, requires Python 3.11 or lower
 # ML dependencies
